bridges/jac-bridge/tests/ui/unsupported_vec_element.stderr
error: unsupported Vec element type: only bool, integer, String, and bridged opaque elements are bridgeable
  --> tests/ui/unsupported_vec_element.rs:10:34
   |
10 |         pub fn bad(&self) -> Vec<f64> {
   |                                  ^^^
